--- a/index.html
+++ b/index.html
@@ -4,19 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹 화면 구현 수업</title>
+    <title>instagram</title>
 </head>
-<body> 
-    <h1>환영 Welcome</h1>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <ullist class="type"></ullist>
-    <ullist class="type"></ullist>
-    <ullist class="type"></ullist>
+<body>
+    <div>
+        <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png"/>
+    <div>
+    <div/>
+        <img src="image/profile.jpg.jpg" width="50px"/>
+        <div>
+            <h2>__jam_2</h2>
+            <button>프로필 편집</button>
+        </div>
+    </div>
+</body>
+    <p>
+        <strong>
+            성재민 (Jae min Seong)
+        </strong><br/>
+        학생
+    </p>
+    <p>
+        <a href="https: //needleworm.github.io">
+        jmsung99@naver.com</a>
+    </p>
+    <div> 
+        <div>
+            <div>
+            <img src="image/hl 1.jpg" height="35px"/>
+    </div>
+    <div>
+        😎
+    </div>
+        </div>
+        <img src="image/hl 2.jpg" height="35px"/>
+    </div>
+    <div>
+        🥰
+        </div>
+    </div>
+</div>
+    <p>
+        게시물<br/>
+        팔로워<br/>
+        팔로우<br/>
+        0<br/>
+        1.5k<br/>
+        100
+    <div>아이콘이 들어갈 자리</div>
+    <div>
+        <img src="image/thumbnails/1.jpg" width="32%"/>
+        <img src="image/thumbnails/2.jpg" width="32%"/>
+        <img src="image/thumbnails/3.jpg" width="32%"/>
+        <img src="image/thumbnails/4.jpg" width="32%"/>
+        <img src="image/thumbnails/5.jpg" width="32%"/>
+        <img src="image/thumbnails/6.jpg" width="32%"/>
+        <img src="image/thumbnails/7.jpg" width="32%"/>
+        <img src="image/thumbnails/8.jpg" width="32%"/>
+        <img src="image/thumbnails/9.jpg" width="32%"/>
+     </div>
     
+</p>
 </body>
 </html>
 
